Passed parameters from html

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -15,12 +15,12 @@
 
   <ion-item>
     <ion-label floating>Username</ion-label>
-    <ion-input type="username"></ion-input>
+    <ion-input type="username" [(ngModel)]="username"></ion-input>
   </ion-item>
   
     <ion-item>
     <ion-label floating>Password</ion-label>
-    <ion-input type="password"></ion-input>
+    <ion-input type="password" [(ngModel)]="password"></ion-input>
   </ion-item>
   
   
