--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -21,32 +21,32 @@
 
   <ion-item>
     <ion-label floating>First Name</ion-label>
-    <ion-input type="text"></ion-input>
+    <ion-input type="text" [(ngModel)]="first_name"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label floating>Last Name</ion-label>
-    <ion-input type="last"></ion-input>
+    <ion-input type="last" [(ngModel)]="last_name"></ion-input>
   </ion-item>
 
   <ion-item>
     <ion-label floating>Username</ion-label>
-    <ion-input type="username"></ion-input>
+    <ion-input type="username" [(ngModel)]="username"></ion-input>
   </ion-item>
   
     <ion-item>
     <ion-label floating>Password</ion-label>
-    <ion-input type="password"></ion-input>
+    <ion-input type="password" [(ngModel)]="password"></ion-input>
   </ion-item>
   
     <ion-item>
     <ion-label floating>E-mail</ion-label>
-    <ion-input type="email"></ion-input>
+    <ion-input type="email" [(ngModel)]="email"></ion-input>
   </ion-item>
   
    <ion-item>
     <ion-label floating>Mobile Number</ion-label>
-    <ion-input type="mobile"></ion-input>
+    <ion-input type="mobile" [(ngModel)]="mobile_number"></ion-input>
   </ion-item>
   
           <button ion-button full color="lightText" (click)="signup()">Sign Up</button>
